# rusty-pico-fragments

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: display.rs  main.rs
