[package]
name = "rusty-pico-fragments"
version = "0.1.0"
authors = ["Ane Johanson"]
description = "Fragment-shader-like graphics with Raspberry Pi Pico 2"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
panic-halt = "1.0"

rp235x-hal = { version = "0.3", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }
